Make links open on same page

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <!-- web -->
          <div class="square">
          <div class="square-header">web</div>
-         <a href="http://reddit.com/" target="_blank">reddit</a>
-         <a href="https://youtube.com/" target="_blank">youtube</a>
-         <a href="https://csw.schoology.com/" target="_blank">schoology</a>
+         <a href="http://reddit.com/">reddit</a>
+         <a href="https://youtube.com/">youtube</a>
+         <a href="https://csw.schoology.com/">schoology</a>
          </div>
       </div>
     </div>
