--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1,
       shrink-to-fit=no">
     <link rel="stylesheet" href="resources/css/style.css">
-    <title>Startpage....</title>
+    <title>startpage</title>
   </head>
   <body>
     <div class="container">
